Add room creation and sharing
